src/components/SummaryCard/style.css
.summary-card {
  border-top: 1px solid var(--primary-gray-color);
  background-color: var(--white-color);
  height: 100%;
  width: 100%;
  padding: 5%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.summary-card-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.summary-card-title {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  width: 100%;
  height: 30px;
}

.summary-card-header-text:hover {
  cursor: pointer;
}

.summary-data-wrapper {
  display: flex;
  width: 100%;
  align-items: center;
}

.summary-chart,
.summary-data {
  min-height: 100px;
  align-self: center;
  margin: 5px 0;
}

.summary-data {
  display: flex;
  width: 40%;
  flex-direction: column;
  justify-content: center;
  line-height: 1;
}

.summary-chart {
  width: 60%;
  height: 80px;
}

/* -------------------- MEDIA QUERIES -------------------- */
/* Initial Desktop Breakpoint */
@media screen and (max-width: 1675px) {
  .summary-card-title > h4 {
    width: 150px;
  }
}

/* Initial Tablet Breakpoint */
@media screen and (max-width: 920px) {
  .summary-card {
    height: 200px;
  }
  .summary-card-title {
    font-size: 18px;
  }
}

/* Initial Mobile Breakpoint */
@media screen and (max-width: 760px) {
  .summary-card {
    height: fit-content;
    padding: 20px;
    margin-bottom: 10px;
    border: 1px solid var(--primary-gray-color);
  }

  .summary-card-header-text {
    font-size: 16px;
    width: 100px;
  }
}

@media screen and (max-width: 600px) {
  .summary-card-title > h4 {
    width: 100px;
  }
}

